# fast-parallel-genome-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/examples/Zika/: input_zika.tsv
data/examples/tests/SARS_CoV2_test/: gisaid_hcov-19_2025_05_26_16.fasta  pilot_genes.tsv
data/examples/tests/alignment_test/: info.txt  input_genomes_prova.tsv  seq1.fasta  seq2.fasta
data/examples/tests/translation_synthetic_test/: input_genomes_prova.tsv  seq1.fasta  seq2.fasta
src/: flashGeneAligner.cpp
